--- a/index.html
+++ b/index.html
@@ -1,60 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-     <meta charset="UTF-8">
-     <meta content="width=device-width, initialscale=1.0">
-     <title>Biography_of_NM</title>
-    </head>
 
-    <body>
-     <p>
-        <h1>BIOGRAPHY OF NELSON MANDELA</h1>
-     </p>
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initialscale=1.0">
+    <title>Biography_of_NM</title>
+    <link href="./styles.css" rel="stylesheet"/>
+</head>
 
-     <p>
-        <img src="./photos/nelson_madela1.jpg" width="280" height="280"/>
-     </p>
+<body>
+    <p>
+    <h1  id="heading">BIOGRAPHY OF NELSON MANDELA</h1>
+    </p>
 
-     <p>
-        <h3>Brief Biography</h3>
-        <Text>
-            He studied law at the University of Hare and University of Witwatersrand before practicing law in Johannesburg. He spent most of his youthful and middle-age years passionately fighting against colonialism and the apartheid system in South Africa. In 1962, he was unjustly sentenced to life imprisonment for conspiring to overthrow the government. After serving his sentence for 27 years, he was freed in 1990 after the fall of the apartheid government in his country. On May 1994, he elected the first African native president of South Africa, an event was greatly celebrated on the entire African continent. He died in 2013 at the age of 95.
-        </Text>
-     </p>
+    <p>
+        <img src="./photos/nelson_madela1.jpg" width="280" height="280" />
+    </p>
 
-     <p>
-        <h3>Achievements and Honors</h3>
-        <p>
-            <Text>
-               President of the Republic of South Africa from May 10, 1994.
-            </Text>
-        </p>
-        <p>
-            <Text>
-                Nobel peace prize winner of 1993
-            </Text>
-        </p>
-        <p>
-            <Text>
-            Lenin peace prize winner
-            </Text>
-        </p>
-        <p>
-            <Text>
-              He was awarded the Aaturk peace prize by Turkey
-            </Text>
-        </p>
-        <p>
-            <Text>
-                He was awarded the US presidential medal of freedom
-            </Text>
-        </p>
-        <p>
-            <Text>
-              He was awarded the Al-Gaddafi International proze for human rights
-            </Text>
-        </p>
-     </p>
+    
+        <u>
+            <h3>Brief Biography</h3>
+        </u>
+   
 
-    </body>
+    <p class="bio-para"> He studied law at the University of Hare and University of Witwatersrand before practicing law in Johannesburg.
+        He spent most of his youthful and middle-age years passionately fighting against colonialism and the apartheid
+        system in South Africa. In 1962, he was unjustly sentenced to life imprisonment for conspiring to overthrow the
+        government. After serving his sentence for 27 years, he was freed in 1990 after the fall of the apartheid
+        government in his country. On May 1994, he elected the first African native president of South Africa, an event
+        was greatly celebrated on the entire African continent. He died in 2013 at the age of 95.</p>
+
+    </p>
+
+    <u>
+    <h3>Achievements and Honors</h3>
+    </u>
+
+    <P>
+        President of the Republic of South Africa from May 10, 1994.
+    </p>
+
+    <p>
+        Nobel peace prize winner of 1993
+    </p>
+
+    <p>
+        Lenin peace prize winner
+    </p>
+
+    <p>
+        He was awarded the Aaturk peace prize by the Turkiye government
+    </p>
+
+    <p>
+        He was awarded the US presidential medal of freedom
+    </p>
+
+    <p>
+        He was awarded the Al-Gaddafi International proze for human rights
+    </p>
+
+    <article>
+        <u>
+            <h3>References</h3>
+        </u>
+
+        <ul>
+            <li>
+                <a href="https://www.nelsonmandela.org/biography">Nelson Mandela Foundation</a>
+            </li>
+
+            <li>
+                <a href="https://en.wikipedia.org/wiki/Nelson_Mandela">Nelson Mandela - Wikipedia</a>
+            </li>
+        </ul>
+    </article>
+
+</body>
+
 </html>
